# risk-aware-decision-engine

./: .gitignore  README.md  full_file_list.txt  main.py  pyproject.toml  requirements.txt
configs/: global.yaml  phase1_baseline.yaml  shipping.yaml
data/processed/: backtest_results.csv  market_regimes.csv  regime_stats.json  synthetic_charter_rates.csv  vendor_profiles.csv
examples/: run_phase1.py  run_phase2.py  run_phase3.py  run_phase4_backtest.py
scripts/: list_all_files.py
src/decision_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/decision_intelligence/core/constraints/: base.py
src/decision_intelligence/core/decision/: base.py  orchestrator.py
src/decision_intelligence/core/forecasting/: base.py
src/decision_intelligence/core/objective/: base.py
src/decision_intelligence/core/optimization/: base.py  scipy_solver.py
src/decision_intelligence/core/regime/: base.py
src/decision_intelligence/core/risk/: base.py  monte_carlo.py
src/decision_intelligence/domain/shipping/: adapter.py  constraints.py  data_pipeline.py  engine.py  objective.py  risk.py  utils.py
src/decision_intelligence/governance/: audit.py  explainability.py  model_registry.py
src/decision_intelligence/pipelines/: simulate_pipeline.py  train_pipeline.py  validate_pipeline.py
tests/core/constraints/: test_base.py
tests/core/decision/: test_orchestrator.py
tests/core/forecasting/: test_base.py
tests/core/optimization/: test_scipy_solver.py
tests/core/risk/: test_monte_carlo.py
tests/governance/: test_audit.py
